# sorakAi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: README.md  gateway.yaml  ingest.yaml  namespace.yaml  rag.yaml  redis.yaml
openapi/: README.md  gateway.openapi.json  gateway.openapi.yaml  ingest.openapi.json  ingest.openapi.yaml  rag.openapi.json  rag.openapi.yaml
scripts/: export_openapi.py
sorakai/: __init__.py
sorakai/common/: __init__.py  config.py  embedding.py  ingest.py  llm.py  logging_utils.py  mlflow_tracking.py  openapi_bundle.py  retrieval.py  schemas.py  store.py
sorakai/gateway/: app.py
sorakai/ingest/: app.py
sorakai/rag/: app.py
tests/: conftest.py  test_gateway.py  test_ingest.py  test_rag.py
