[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sorakai"
version = "0.1.0"
description = "Microservices MVP: ingest, RAG, gateway + MLflow hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["sorakai*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["sorakai"]
branch = true
